# ice-puzzle

./: CMakeLists.txt  README.md
src/: gpu_ec.cu  gpu_hash.cu  main.cpp  utils.cpp
